test/mutation_analysis/s0496_next_greater_element_i/hafis/starchat/mutants/6/result.txt
./test/mutation_analysis/s0496_next_greater_element_i/hafis/starchat/mutants/6/Solution.java:25: error: unreachable statement
        for (int i = 0; false; i++) {
                                    ^
1 error
